Bug 39378 - Words are cutoff in the Modifiers section for Online Orders on Firefox and Internet Explorer

--- a/skins/weborder/css/modifiers.css
+++ b/skins/weborder/css/modifiers.css
@@ -64,8 +64,6 @@
 }
 
 .modifiers_table .modifier {
-    width: 330px;
-    float: left;
     word-break: break-all;
     margin: 0 25px 15px 0;
     cursor: pointer;
@@ -116,10 +114,6 @@
     float: left;
     line-height: 1.4em;
     max-width: 100%;
-}
-/* Fix for IE and FF. Bug 39378, 34207 */
-html:not(.ua-webkit) .modifiers_table .modifier span.title {
-    width: 78px;
 }
 
 .modifiers_table .modifier span.info {
@@ -270,26 +264,43 @@ span.tooltip:before {
 }
 @media only screen and (min-width: 949px) {
     .modifiers_table .modifier {
-        width: 310px;
+        float: left;
+        width: 230px;
         min-height: 45px;
         margin-bottom: 5px;
     }
-    .modifiers_table .modifier label {
+    .modifiers_table .modifiers_has-qty .modifier,
+    .modifiers_table .modifiers_has-split .modifier {
+        width: 260px;
+    }
+    .modifiers_table .modifiers_has-qty .modifier label,
+    .modifiers_table .modifiers_has-split .modifier label {
         width: 190px;
     }
-    .modifiers_table .modifier span.title_wrapper {
+    .modifiers_table .modifiers_has-split .modifier span.title_wrapper,
+    .modifiers_table .modifiers_has-qty .modifier span.title_wrapper {
         width: 100px;
+    }
+
+    .modifiers_table .modifiers_has-qty.modifiers_has-split .modifier,
+    .modifiers_table .modifiers_has-qty.modifiers_show-description .modifier,
+    .modifiers_table .modifiers_has-split.modifiers_show-description .modifier {
+        width: 310px;
+    }
+
+    .modifiers_table .modifiers_has-qty.modifiers_has-split.modifiers_show-description .modifier {
+        width: 320px;
+    }
+
+    .modifiers_table .modifiers_show-description .modifier label {
+        width: 200px;
+    }
+
+    .modifiers_table .modifiers_show-description .modifier span.title_wrapper {
+        width: 110px;
     }
     .modifiers_table .modifier .mdf_quantity select {
         width: 55px;
-    }
-}
-@media only screen and (min-width: 1440px) {
-    .modifiers_table .modifier {
-        width: 320px;
-    }
-    .modifiers_table .modifier label {
-        width: 195px;
     }
 }
 
